--- a/src/main/resources/application.properties.template
+++ b/src/main/resources/application.properties.template
@@ -8,3 +8,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/database_name
 spring.datasource.username=your_username
 spring.datasource.password=your_password
 spring.jpa.hibernate.ddl-auto=update
+
+token.signing.key=your_secret_key
