--- a/src/main/resources/application.properties.template
+++ b/src/main/resources/application.properties.template
@@ -4,7 +4,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.show_sql=true
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/database_name
+spring.datasource.url=jdbc:postgresql://localhost:5432/tms
 spring.datasource.username=your_username
 spring.datasource.password=your_password
 spring.jpa.hibernate.ddl-auto=update
