--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 /src/main/resources/application.properties
-
+/src/main/resources/application-dev.properties
 
 ### STS ###
 .apt_generated
@@ -33,4 +33,3 @@ build/
 
 ### VS Code ###
 .vscode/
-!/src/main/resources/application-dev.properties
