--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,6 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-/src/main/resources/application.properties
-/src/main/resources/application-dev.properties
 
 ### STS ###
 .apt_generated
@@ -33,3 +31,4 @@ build/
 
 ### VS Code ###
 .vscode/
+!/.env
