--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,3 +30,7 @@ services:
     depends_on:
       db:
         condition: service_started
+    environment:
+      DB_USERNAME: ${DB_USERNAME}
+      DB_PASSWORD: ${DB_PASSWORD}
+      TOKEN_SIGNING_KEY: ${TOKEN_SIGNING_KEY}
