--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,10 @@
 	</scm>
 	<properties>
 		<java.version>21</java.version>
+		<mapstruct.version>1.5.5.Final</mapstruct.version>
+		<jsonwebtoken.version>0.12.6</jsonwebtoken.version>
+		<springdoc.version>2.2.0</springdoc.version>
+		<spring-dotenv.version>4.0.0</spring-dotenv.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -54,7 +58,7 @@
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-			<version>2.2.0</version>
+			<version>${springdoc.version}</version>
 		</dependency>
 
 		<dependency>
@@ -82,7 +86,7 @@
 		<dependency>
 			<groupId>me.paulschwarz</groupId>
 			<artifactId>spring-dotenv</artifactId>
-			<version>4.0.0</version>
+			<version>${spring-dotenv.version}</version>
 		</dependency>
 
 		<dependency>
@@ -100,12 +104,12 @@
 		<dependency>
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct</artifactId>
-			<version>1.5.5.Final</version>
+			<version>${mapstruct.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct-processor</artifactId>
-			<version>1.5.5.Final</version>
+			<version>${mapstruct.version}</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
@@ -114,17 +118,17 @@
 			<dependency>
 				<groupId>io.jsonwebtoken</groupId>
 				<artifactId>jjwt-api</artifactId>
-				<version>0.12.6</version>
+				<version>${jsonwebtoken.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>io.jsonwebtoken</groupId>
 				<artifactId>jjwt-impl</artifactId>
-				<version>0.12.6</version>
+				<version>${jsonwebtoken.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>io.jsonwebtoken</groupId>
 				<artifactId>jjwt-jackson</artifactId>
-				<version>0.12.6</version>
+				<version>${jsonwebtoken.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
